--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
-/*  your css code here. If applicable */
+.p1{
+	 color :   #00f;
+	background-color : #eee;
+}
+.p3{
+ color :   #00f;
+	background-color : #eee;	
+}
